[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Musharib"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-openai (>=1.1.9,<2.0.0)",
    "openai (>=2.21.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "rich (>=14.3.2,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
